# scrapers

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.py
.devcontainer/: .env  devcontainer.json  post-create.sh
.devcontainer/artifacts/vscode/: settings.json
.devcontainer/vscode/: launch.json
.github/: settings.yml
docs/: PC-CD.ods
lint/: .flake8
scrapers/: diff.py  misc.py
scrapers/ag/: conf.py  games.py  index.py
scrapers/igdb/: index.py  misc.py
scrapers/mg/: index.py
scrapers/qz/: conf.py  games.py  index.py
scrapers/rawg/: index.py
sqldb/: db_init.sql  test.py
