[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core", "poetry-dynamic-versioning"]

[tool.poetry]
authors = ["yag"]
description = "yag scrapers"
keywords = ["yag", "scrapers"]
name = "scrapers"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "*"
dateparser = "*"
html5lib = "*"
lxml = "*"
python-dateutil = "*"
requests = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
tox = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.bandit.assert_used]
skips = ["data", "*_test.py", "*/test_*.py"]

[tool.black]
line-length = 120
exclude = '''
(
  \.git
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | data
)
'''

[tool.isort]
include_trailing_comma = true
force_grid_wrap = 2
use_parentheses = true
line_length = 120
profile = "black"
multi_line_output = 3
skip = "target"
skip_glob = "**/gen/*,.venv*/*,venv*/*,.tox/*,data/*"
known_first_party = "scrapers"
known_third_party = "pytest"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-s -v"
testpaths = "tests"
markers = [
    "integration: marks integration tests",
    "unit: marks unittests"
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
skipsdist = True
skip_missing_interpreters = True

[testenv:lint]
skip_install = true
recreate = false
ignore_errors = true
deps =
    pre-commit
commands =
    pre-commit run --all-files

[testenv:test]
passenv = *
recreate = false
ignore_errors = true
deps =
    poetry
commands_pre =
    poetry install --with test
commands =
    poetry run pytest tests
"""
